# raytracing-in-a-weekend

./: .gitignore  Cargo.toml  README.md
examples/: ppm.rs
ria-weekend/: Cargo.toml
ria-weekend/examples/: ppm.rs  ray_demo.rs  sphere.rs  surface_normal_sphere.rs
ria-weekend/src/: camera.rs  demo.rs  hitable.rs  lib.rs  linear_interpolation_y.rs  main.rs  ppm.rs  ppm_example.rs  ray.rs  render.rs  simple_sphere.rs  vec3.rs
ria-weekend/src/demos/: antialiasing.rs  hitable_sphere.rs  hitable_surface_normal_sphere.rs  linear_gradient_rectangle.rs  linear_interpolation_y.rs  mod.rs  ppm_example.rs  simple_antialiasing.rs  simple_rectangle.rs  simple_sphere.rs  surface_normal_sphere.rs
ria-weekend/src/shapes/: sphere.rs
ria-weekend/src/types/: hitable.rs  hitable_list.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
src/: camera.rs  lib.rs  main.rs  ray.rs  vec3.rs
src/demos/: defocus_blur.rs  dielectric_material.rs  diffuse_materials.rs  final_scene.rs  hitable_sphere.rs  linear_gradient_rectangle.rs  materials.rs  mod.rs  positionable_camera.rs  simple_antialiasing.rs  simple_rectangle.rs  simple_sphere.rs  surface_normal_sphere.rs
src/types/: hitable.rs  hitable_list.rs  material.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
