[package]
name = "ria-weekend"
version = "0.1.0"
authors = ["ishanjain28 <ishanjain28@gmail.com>"]
edition = "2018"


[features]
gui = ["sdl2"]
avx2 = ["packed_simd"]

[dependencies]
sdl2 = { version = "0.33.0", optional = true }
rand = { version = "0.7.3", features = ["small_rng"] }
rayon = "1.3.0"
packed_simd = { version = "0.3.3", optional = true }
